	* Fixed silent error in xbee_frameGetFreeID() when all Frame IDs are in use
	* Fixed bug when using save_addr16 and save_addr64, along with catchall connections
	* Debug output now indicates how much data was recieved in each packet
	* Fixed major bug in network server - conValidate() now works correctly
	* xbee_logTargetSet() and xbee_logLevelSet() now announce their changes

v3.0.10 - 4 Sept 2013
	* Fixed xbee_frameWait()
	* Fixed libxbee::Con::Tx() - now throws a libxbee::xbee_etx
	* xbee_conRx() can now be called to just get the number of packets in the buffer
	* Added C++ compatibility with byte vectors
	* Added noWaitForAck flag so that xbee_conTx() will return straight away - useful for AT connections
	* Added xbee_conxTx() and friends to allow tracking of frame IDs
	* Added samples for libxbee <-> libxbee and I/O data
	* Transmit Status connections can now have callbacks
	* Added manuals to the repo
	* Added a Qt sample
	* Added support for XBee Series 3 modules
	* Fixed network client bug
	* Fixed a memory leak
	* Added OSX support!
	* Added support for XBee Series 6B modules

v3.0.9 - 29 Apr 2013
	* Fixed high baudrate corruption issues
	* Added a timestamp from clock_gettime() to all incoming packets
	* Fixed broken ifdef around timespec definition
	* Improved performance when locating a Frame ID
	* Fixed a corner-case where timeouts occur prematurely if the packet transmission is delayed
	* Added 'Sensor' connection type for XBee Series 2 modules
	* Implemented fundamental xbeeZB support - ZDO, etc will need to be implemented separately for now
	* Enhanced C++ usability
	* Added xbee_conTypeGet()
	* Added support for a larger range of standard baud rates on Linux and BSD
	* Added support for arbitrary baud rates on Linux and BSD (see config.mk to enable)
	* xbee_conTx() and relations now return XBEE_ETIMEOUT directly instead of via the retVal parameter
	* Improved handling of Tx status frames

v3.0.8 - 24 Dec 2012
	* Fixed analog input values