@@ -8,6 +8,7 @@ v3.0.11 - in progress
 	* Debug output now indicates how much data was recieved in each packet
 	* Fixed major bug in network server - conValidate() now works correctly
 	* xbee_logTargetSet() and xbee_logLevelSet() now announce their changes
+	* Fixed xbeeZB's Identify packet parsing
 
 v3.0.10 - 4 Sept 2013
 	* Fixed xbee_frameWait()
